--- a/proj/vc7ide/robust_emulation_test.vcproj
+++ b/proj/vc7ide/robust_emulation_test.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="memory_algorithm_test"
-	ProjectGUID="{58E18CC3-6092-8F4E-A3E7-A792230D3629}"
+	Name="robust_emulation_test"
+	ProjectGUID="{58CCE183-4AFE-6092-C4F5-BA0D3A692628}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -13,7 +13,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../../Bin/Win32/Debug"
-			IntermediateDirectory="Debug/memory_algorithm_test"
+			IntermediateDirectory="Debug/robust_emulation_test"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
@@ -35,11 +35,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/memory_algorithm_test_d.exe"
+				OutputFile="$(OutDir)/robust_emulation_test_d.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../../../../stage/lib"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/memory_algorithm_test.pdb"
+				ProgramDatabaseFile="$(OutDir)/robust_emulation_test.pdb"
 				SubSystem="1"
 				TargetMachine="1"
 				FixedBaseAddress="1"/>
@@ -67,12 +67,11 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="../../Bin/Win32/Release"
-			IntermediateDirectory="Release/memory_algorithm_test"
+			IntermediateDirectory="Release/robust_emulation_test"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				GlobalOptimizations="TRUE"
 				AdditionalIncludeDirectories="../../../.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;BOOST_DATE_TIME_NO_LIB"
 				RuntimeLibrary="2"
@@ -81,13 +80,13 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				DebugInformationFormat="0"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/memory_algorithm_test.exe"
+				OutputFile="$(OutDir)/robust_emulation_test.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../../../../stage/lib"
 				GenerateDebugInformation="TRUE"
@@ -123,15 +122,10 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{399570F1-7AB7-4376-06A6-D752A2A322FF}">
+			UniqueIdentifier="{4C737CF1-6C7A-A035-4376-A1A2C75F232F}">
 			<File
-				RelativePath="..\..\test\memory_algorithm_test.cpp">
+				RelativePath="..\..\test\robust_emulation_test.cpp">
 			</File>
-		</Filter>
-		<Filter
-			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{94FF3380-9B3D-4b05-88FA-6FAF2552EB01}">
 		</Filter>
 	</Files>
 	<Globals>
