Fixes #9767 (bootstamp generation causes error in case of corrupt Windows Event Log) and #9911 (get_tmp_base_dir(...) failure)

--- a/proj/vc7ide/interprocesslib.vcproj
+++ b/proj/vc7ide/interprocesslib.vcproj
@@ -575,7 +575,7 @@
 				RelativePath="..\..\..\..\boost\interprocess\detail\segment_manager_helper.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\interprocess\detail\tmp_dir_helpers.hpp">
+				RelativePath="..\..\..\..\boost\interprocess\detail\shared_dir_helpers.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\interprocess\detail\transform_iterator.hpp">
